--- a/assets/style.css
+++ b/assets/style.css
@@ -26,6 +26,7 @@ button{
     background-color: var(--background-color);
     color:var(--buttonTextColor);
     width: fit-content;
+    border-radius: 10%;
 }
 
 h1{
@@ -102,6 +103,7 @@ main{
 #inputInitials {
     display: flex;
     margin: 1rem;
+    justify-content: center;
 }
 
 #inputInitials p{
@@ -117,6 +119,13 @@ main{
 
 #goBack {
     margin-right: 1rem;
+}
+
+/* CSS for answers */
+
+#answers p {
+    font-size: 2rem;
+    font-style: italic;
 }
 
 /* CSS for Display Change */
